fixed 4th gym image not showing

--- a/style.css
+++ b/style.css
@@ -125,6 +125,47 @@ nav .logo {
   margin-bottom: 30px;
 }
 
+.circles-container {
+    position: absolute;
+    top:30%;
+    left:40%;
+}
+
+.circle-1 {
+    height: 400px;
+    width: 400px;
+    border-radius: 50%;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #333;
+    border-top-color: var(--text-white);
+    animation: clockWise 3s linear infinite;
+    position: relative;
+}
+
+.circle-2 {
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    border: 4px solid #333;
+    border-top: 4px solid white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: antiClockWise 3s linear infinite
+}
+
+@keyframes clockWise {
+    from {transform: rotate(0deg)}
+    to {transform: rotate(360deg);}
+}
+
+@keyframes antiClockWise {
+    from {transform: translate(-50%, -50%) rotate(0deg)}
+    to {transform: translate(-50%, -50%) rotate(-360deg);}
+}
+
 .btn {
   display: inline-block;
   padding: 15px 40px;
